prow/cluster/components/tls-ing_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: tls-ing
  annotations:
    kubernetes.io/ingress.global-static-ip-name: prow-static-ip
    networking.gke.io/managed-certificates: status-kyma-prow
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/v1beta1.FrontendConfig: "prow-frontend-config"
spec:
  rules:
  - host: status.build.kyma-project.io
    http:
      paths:
      - path: /*
        backend:
          service:
            name: deck
            port:
              number: 80
      - path: /hook
        backend:
          service:
            name: hook
            port:
              number: 8888
      - path: /metrics
        backend:
          service:
            name: pushgateway-external
            port:
              number: 80
      - path: /robots.txt
        backend:
          service:
            name: web-server
            port:
              number: 80
